syntax = "proto3";

package user.v1;

option go_package = "/healthApi/proto/user;userpb";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
  string first_name =4;
  string last_name=5;
}

message RegisterRequest {
  string email = 2;
  string password = 3;
  string first_name =4;
  string last_name=5;
}

message RegisterResponse {
  int32 user_id=1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 user_id = 1;
}
